# cineplex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  movie_classifier.py  pyproject.toml
.github/workflows/: test.yml
models/: model.pt
src/: __init__.py  config.py  constants.py  model.py  predict.py  preprocess.py  process.py  utils.py
tests/: test_model.py  test_predict.py  test_preprocess.py  test_process.py  test_utils.py
