[tool.poetry]
name = "cineplex"
version = "0.1.0"
description = "genre classification cli"
authors = ["Cos <costasvaf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
mypy = "^0.902"
numpy = "^1.20.3"
nltk = "^3.6.2"
click = "^8.0.1"
pandas = "^1.2.4"
gensim = "^4.0.1"
torch = "^1.9.0"
pre-commit = "^2.13.0"
sklearn = "^0.0"
python-Levenshtein = "^0.12.2"
tensorboard = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
